# uv-stucco

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.Linux  Makefile.Win  README.md  RUVM_Ops.py  RUVM_Props.py  RUVM_UI.py  UVGP_Ops.py  UVGP_Props.py  UVGP_UI.py  __init__.py  conanfile.txt  xmake.lua
Include/: RUVM.h  UvStucco.h
Src/: Alloc.c  Alloc.h  Allocator.c  AttribUtils.c  AttribUtils.h  BoundaryFaces.c  BoundaryFaces.h  Clock.h  CombineJobMeshes.c  CombineJobMeshes.h  Context.h  DebugAndPerf.h  DebugDump.h  EnclosingCells.c  EnclosingCells.h  Error.h  ImageUtils.c  ImageUtils.h  Io.c  Io.h  MapFile.h  MapToFace.c  MapToJobMesh.c  MapToJobMesh.h  MapToMesh.c  MapToMesh.h  MathUtils.c  MathUtils.h  MergeBoundsFaces.c  Mesh.c  Mesh.h  Platform.h  PlatformIo.h  PlatformLinux.c  PlatformWin.c  PlatformWindows.c  QuadTree.c  QuadTree.h  RUVM.c  RuvmInternal.h  (+13 more)
Src/Unix/: ThreadPoolUnix.c
Src/Win/: FileWin.c  ThreadPoolWin.c
include/: uv_stucco.h
src/: alloc.c  alloc.h  attrib_utils.c  attrib_utils.h  buf_mesh.c  clip.c  clip.h  clock.h  combine_job_meshes.c  combine_job_meshes.h  context.h  debug_and_perf.h  error.h  hash_table.c  hash_table.h  image_utils.c  image_utils.h  in_piece.h  in_piece_split.c  in_pieces_init.c  interp_and_xform.c  interp_and_xform.h  interp_for_buf.c  io.c  io.h  job.c  job.h  map.h  map_to_face.c  map_to_job_mesh.c  map_to_job_mesh.h  math_utils.c  math_utils.h  merge_and_snap.c  merge_and_snap.h  merge_bounds_faces.c  mesh.c  mesh.h  out_mesh.c  pixenals_types.h  (+13 more)
src/unix/: file_unix.c  thread_pool_unix.c
src/win/: file_win.c  thread_pool_win.c
