cmake_minimum_required(VERSION 3.2)
cmake_policy(SET CMP0063 NEW)
cmake_policy(SET CMP0091 NEW)
project(UvStucco)
option(FIND_ZLIB "Try to find zlib" ON)
option(FIND_ZLIB_CONAN "Use conan to find zlib" OFF)
option(ZLIB_INCLUDE "Include directory for zlib" "")
option(ZLIB_LIB "Lib directory for zlib" "")
if (NOT FIND_ZLIB)
	if (NOT ZLIB_INCLUDE OR NOT ZLIB_LIB)
		message(FATAL_ERROR "FIND_LIB disabled, specify dir with ZLIB_LIB & ZLIB_INCLUDE")
	endif()
endif()
get_property(IS_MULTI_CONFIG GLOBAL PROPERTY GENERATOR_IS_MULTI_CONFIG)
if (NOT IS_MULTI_CONFIG)
	message("Building for single build type")
	if (NOT CMAKE_BUILD_TYPE)
		message("No build type specified, building Release")
		set(CMAKE_BUILD_TYPE Release "" FORCE)
	endif()
endif ()
if (UNIX)
	message("Building for Unix")
	set(CMAKE_C_FLAGS "")
	if (CMAKE_BUILD_TYPE MATCHES DEBUG)
		message("Debug build")
		set(CMAKE_C_FLAGS  "-g -O0 -DEBUG -pthread -Wshadow -Wunused -Wunused-parameter -fPIC -D PLATFORM_LINUX")
	endif()
	if (CMAKE_BUILD_TYPE MATCHES RELEASE)
		message("Release build")
		set(CMAKE_C_FLAGS  "-ftree-vectorize -mavx2 -finline-functions -flto -O2 -pthread -fPIC -D PLATFORM_LINUX")
	endif()
	set(PLATFORM_src_FILES src/unix/file_unix.c src/unix/thread_pool_unix.c)
endif()
if (WIN32)
	message("Building for Windows")
	message("CMAKE_MSVC_RUNTIME_LIB is " + ${CMAKE_MSVC_RUNTIME_LIBRARY})
	set(CMAKE_C_FLAGS "/D PLATFORM_WINDOWS /D WIN32 /D WINDOWS /TC")
	set(CMAKE_C_FLAGS_RELEASE "/O2")
	set(CMAKE_C_STANDARD 11)
	set(PLATFORM_src_FILES src/win/file_win.c src/win/thread_pool_win.c)
endif()
message("BUILD_SHARED_LIBS is " ${BUILD_SHARED_LIBS})
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_library(UvStucco STATIC src/alloc.c src/merge_bounds_faces.c src/io.c src/map_to_face.c
            src/quadtree.c src/uv_stucco.c src/math_utils.c src/utils.c src/attrib_utils.c
            src/single_bounds_face.c src/combine_job_meshes.c src/map_to_job_mesh.c
            src/image_utils.c src/mesh.c src/usg.c extern/MikkTSpace/mikktspace.c
			${PLATFORM_src_FILES})
target_include_directories(UvStucco PUBLIC include)
target_include_directories(UvStucco PRIVATE src extern/MikkTSpace)
message("FIND_ZLIB is " + ${FIND_ZLIB})
if (FIND_ZLIB)
	message("Attempting to find zlib")
	find_package(ZLIB REQUIRED)
	message("--zlib include is " + ${ZLIB_INCLUDE_DIRS})
	message("Note that if the above are mismatched, there may be errors at compile time.")
	message ("Consider disabling FIND_ZLIB and specifying manually using ZLIB_LIB and ZLIB_INCLUDE. Or using Conan.")
	message("See github docs for more info.")
	target_include_directories(UvStucco PRIVATE ${ZLIB_INCLUDE_DIRS})
	target_link_libraries(UvStucco ${ZLIB_LIBRARIES} ${ZLIB_DEPENDENCIES})
else()
	target_include_directories(UvStucco PRIVATE ${ZLIB_INCLUDE})
	target_link_libraries(UvStucco ${ZLIB_LIB})
endif()
