# SPDX-FileCopyrightText: 2025 Caleb Dawson
# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.5)
cmake_policy(SET CMP0063 NEW)
cmake_policy(SET CMP0091 NEW)
set(PROJECT UvStucco)
project(${PROJECT})
option(FIND_ZLIB "Try to find zlib" ON)
option(FIND_ZLIB_CONAN "Use conan to find zlib" OFF)
option(ZLIB_INCLUDE "Include directory for zlib" "")
option(ZLIB_LIB "Lib directory for zlib" "")
if (NOT FIND_ZLIB)
	if (NOT ZLIB_INCLUDE OR NOT ZLIB_LIB)
		message(FATAL_ERROR "FIND_LIB disabled, specify dir with ZLIB_LIB & ZLIB_INCLUDE")
	endif()
endif()
get_property(IS_MULTI_CONFIG GLOBAL PROPERTY GENERATOR_IS_MULTI_CONFIG)
if (NOT IS_MULTI_CONFIG)
	message("Building for single build type")
	if (NOT CMAKE_BUILD_TYPE)
		message("No build type specified, building Release")
		set(CMAKE_BUILD_TYPE Release "" FORCE)
	endif()
endif ()
if (UNIX)
	message("Building for Unix")
	set(CMAKE_C_FLAGS "")
	if (CMAKE_BUILD_TYPE MATCHES DEBUG)
		message("Debug build")
		set(CMAKE_C_FLAGS  "-g -O0 -DEBUG -pthread -Wshadow -Wunused -Wno-unused-label -fPIC -D PLATFORM_LINUX")
	endif()
	if (CMAKE_BUILD_TYPE MATCHES RELEASE)
		message("Release build")
		set(CMAKE_C_FLAGS  "-ftree-vectorize -mavx2 -finline-functions -O2 -pthread -fPIC -D PLATFORM_LINUX")
	endif()
endif()
if (WIN32)
	message("Building for Windows")
	message("CMAKE_MSVC_RUNTIME_LIB is "${CMAKE_MSVC_RUNTIME_LIBRARY})
	set(CMAKE_C_FLAGS "/D PLATFORM_WINDOWS /D WIN32 /D WINDOWS /TC")
	set(CMAKE_C_FLAGS_RELEASE "/O2")
	set(CMAKE_C_STANDARD 11)
endif()
message("BUILD_SHARED_LIBS is "${BUILD_SHARED_LIBS})
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_library(${PROJECT} STATIC
	src/io.c src/map_to_face.c src/quadtree.c src/uv_stucco.c src/utils.c
	src/attrib_utils.c src/map_to_job_mesh.c src/mesh.c src/usg.c
	extern/MikkTSpace/mikktspace.c
)
target_include_directories(${PROJECT} PRIVATE include src extern/MikkTSpace)
message("FIND_ZLIB is "${FIND_ZLIB})
if (FIND_ZLIB)
	message("Attempting to find zlib")
	find_package(ZLIB REQUIRED)
	message("--zlib include is "${ZLIB_INCLUDE_DIRS})
	message("Note that if the above are mismatched, there may be errors at compile time.")
	message ("Consider disabling FIND_ZLIB and specifying manually using ZLIB_LIB and ZLIB_INCLUDE. Or using Conan.")
	message("See github docs for more info.")
	target_include_directories(${PROJECT} PRIVATE ${ZLIB_INCLUDE_DIRS})
	target_link_libraries(${PROJECT} PRIVATE ${ZLIB_LIBRARIES} ${ZLIB_DEPENDENCIES})
else()
	target_include_directories(${PROJECT} PRIVATE ${ZLIB_INCLUDE})
	target_link_libraries(${PROJECT} PRIVATE ${ZLIB_LIB})
endif()
set(PLYCUT_PIX_PATH "../")
add_subdirectory(extern/poly-cutout)
if (NOT TARGET PixenalsAllocUtils)
	add_subdirectory(extern/pixenals-alloc-utils)
endif()
add_subdirectory(extern/pixenals-io-utils)
if (NOT TARGET PixenalsMathUtils)
	add_subdirectory(extern/pixenals-math-utils)
endif()
add_subdirectory(extern/pixenals-thread-utils)
target_link_libraries(${PROJECT} PRIVATE
	PolyCutout PixenalsAllocUtils PixenalsIoUtils PixenalsMathUtils PixenalsThreadUtils
)
target_include_directories(${PROJECT} PUBLIC
	extern/poly-cutout/include
	extern/pixenals-types/include extern/pixenals-error-utils/include
	extern/pixenals-alloc-utils/include extern/pixenals-io-utils/include
	extern/pixenals-math-utils/include extern/pixenals-thread-utils/include
)